update new String format